For the generic frontend server, the maximum record size is used as maximum
size of incoming packages (SRU + Z39.50). The value until was previously 
only used in Z39.50 Init negotiation and, later, in a session controlled
sizes of records returned. This is controlled using -k option. It can be
specified, per server, with element maximumrecordsize in YAZ' GFS XML config.

--- 2.1.28 2006/09/04

TCP/IP comstack uses getaddrinfo now to resolve names. It should be IPV6
friendly now.

Fixed bug #644: Using Non Reentrant gethostbyname causes SIGSEGV.

New option for yaz-marcdump -lpos=value which allows setting a portion
of MARC header to a certain value.

Fixes for MARC generation when encoded as MARC-8 (bug 642, 643).

ZOOM-C reads option extraArgs. If set the value of extraArgs is appended to
SRU URI (POST/GET). Value must be URL encoded, such as x-id-a=v1&x-id-b=v2 .

--- 2.1.26 2006/08/15

Fixed problem with SRU mode type (soap, get, post) for yaz-client
and ZOOM-C.

Fixed problem another problem with ZOOM_EVENT_RECV_RECORD . Bug #626.

--- 2.1.24 2006/08/08

Fixed MARC ISO2709 encoding routines to deal with character set 
conversion.

Minor changes to GFS logging. Database included in search request log
line.

Fixes for ZOOM-C: event ZOOM_EVENT_RECV_RECORD was not generated for
cached/multiple records.

Shared libraries are built by default on Unix+configure.

Changed cql2pqf transformation to use a different evaluation order. The
new order is: always, relation, structure, position, truncation, index
and relationModifier. Old order was: always, relation, relationModifier,
structure, index, position, truncation. Note that the the latter ones
override former ones for identical attributes.. The new scheme means that
it is possible to override any existing attribute with a relationModifier.
And also that it is possible to override everything for the index rule
(except the ones listed in relationModifier). No order is perfect but this